--- a/deployment/couchdb/couchdb_local.ini
+++ b/deployment/couchdb/couchdb_local.ini
@@ -7,6 +7,7 @@
 [couchdb]
 ;max_document_size = 4294967296 ; bytes
 ;os_process_timeout = 5000
+users_db_security_editable = true
 
 [couch_peruser]
 ; If enabled, couch_peruser ensures that a private per-user database
